--- a/index.html
+++ b/index.html
@@ -3,18 +3,40 @@
 	
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="jouw naam">
+	<meta name="author" content="Sana Iqbal">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
-	<title>Howdy FED2526</title>
+	<title>Beats by Dre - Wireless Headphones, Earbuds and Speakers</title>
 
-	<link href="styles/style.css" rel="stylesheet">
-
+	<script src="javascript.js" defer></script>
+	<link href="css/style.css" rel="stylesheet">
 	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
 </head>
 
 <body>
-	<h1>Howdy FED2526</h1>
+<header> 
+
+	<!-- <span>&#9776;</span>   hamburger menu -->
+
+ <button aria-label="menu" aria-expanded="false">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+			
+	<nav><img src="images/beats-logo.png" alt="Beats logo"></nav>
+
+
+</header>
+
+<section>
+		<h1>Powebeats Fit</h1>
+		<p>Altijd in vorm.</p>
+		<video src="videos/beats-video-1.mp4" autoplay muted loop></video>
+</section>
+
+
+
 
 	<script defer src="scripts/script.js"></script>
 </body>
