--- a/index.html
+++ b/index.html
@@ -1,44 +1,188 @@
 <!DOCTYPE html>
 <html lang="nl">
-	
+
 <head>
 	<meta charset="UTF-8">
-	<meta name="author" content="Sana Iqbal">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	
+
 	<title>Beats by Dre - Wireless Headphones, Earbuds and Speakers</title>
 
 	<script src="javascript.js" defer></script>
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="icon" type="image/svg+xml" href="images/favicon.svg">
+	<link rel="icon" type="image" href="images/beats-logo.png">
 </head>
 
-<body>
-<header> 
+<body class="pagina-1">
+	<header>
+		<nav>
+			<button aria-label="menu" aria-expanded="false">
+				<span></span>
+				<span></span>
+				<span></span>
+			</button>
 
-	<!-- <span>&#9776;</span>   hamburger menu -->
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="powerbeats-pro-2.html">Powerbeats Pro 2</a></li>
+				<li><a href="#">Support</a></li>
+			</ul>
+		</nav>
 
- <button aria-label="menu" aria-expanded="false">
-          <span></span>
-          <span></span>
-          <span></span>
-        </button>
-			
-	<nav><img src="images/beats-logo.png" alt="Beats logo"></nav>
+		<a href="index.html" aria-label="Beats home">
+			<img src="images/beats-logo.png" alt="Beats logo"></a>
+	</header>
 
 
-</header>
-
-<section>
-		<h1>Powebeats Fit</h1>
-		<p>Altijd in vorm.</p>
+	<!-- SECTION 1 -->
+	<section>
+		<div>
+			<h1>Powerbeats Fit</h1>
+			<p>Altijd in vorm.</p>
+		</div>
+		<a href="powerbeats-pro-2.html">Bestel nu</a>
 		<video src="videos/beats-video-1.mp4" autoplay muted loop></video>
-</section>
+	</section>
 
 
+	<!-- CAROUSEL / SECTION 2 -->
+	<section>
+		<h2>Energie voor je work-outs</h2>
+		<ul>
+			<li>
+				<div>
+					<p>Nieuw</p>
+					<h3>Powerbeats Fit</h3>
+					<p>€ 229,95</p>
+				</div>
+				<img src="images/powerbeatsfit-orange.jpg" alt="Powerbeats Fit oranje">
+			</li>
+
+			<li>
+				<div>
+					<p>Nieuw</p>
+					<h3>Powerbeats Pro 2</h3>
+					<p>€229,95</p>
+				</div>
+				<a href="powerbeats-pro-2.html">
+					<img src="images/powerbeats-pro-2.jpg" alt="Powerbeats Pro 2 grijs">
+				</a>
+			</li>
+			<li>
+				<div>
+					<p>Nieuw</p>
+					<h3>Beats Solo 4</h3>
+					<p>€229,95</p>
+				</div>
+				<img src="images/beats-solo4.jpg" alt="Beats Solo 4 blauw">
+			</li>
+		</ul>
+	</section>
+
+	<!-- SECTION 3 -->
+	<section>
+		<p>NIEUW</p>
+		<h2>Beat-case voor de iPhone 17-serie</h2>
+		<a href="#" aria-label="Beat cases shoppen">SHOPPEN</a>
+		<img src="images/beats-cases.png" alt="Beats cases">
+	</section>
 
 
-	<script defer src="scripts/script.js"></script>
+	<!-- SECTION 4 -->
+	<section>
+		<h2>Moeiteloos winkelen via Apple</h2>
+		<article>
+			<h3>Snel en gratis bezorgd</h3>
+			<p>Profiteer van snelle, gratis verzending van artikelen die op voorraad zijn.</p>
+			<img src="images/bezorging-icoon.png" alt="">
+			<a href="#" aria-label="Meer info over bezorging">Meer info</a>
+		</article>
+
+		<article>
+			<h3>Ophalen in de winkel</h3>
+			<p>Haal je online bestelling op bij een Apple store bij jou in de buurt</p>
+			<img src="images/ophalen-icoon.png" alt="">
+			<a href="#" aria-label="Meer info over bestelling">Meer info</a>
+		</article>
+
+		<Article>
+			<h3>Eenvoudig retourneren</h3>
+			<p>Retourneer in aanmerking komende artikelen aan Apple binnen 14 dagen na ontvangst.</p>
+			<img src="images/retourneren-icoon.png" alt="">
+			<a href="#" aria-label="Meer info over retourneren">Meer info</a>
+		</Article>
+	</section>
+
+	<!-- SECTION 5 -->
+	<section>
+		<div>
+			<h2>Powerbeats Pro 2</h2>
+			<p>Gemaakt voor sporters.</p>
+		</div>
+		<a href="powerbeats-pro-2.html">SHOPPPEN</a>
+		<img src="images/powerbeats-pro2-image.png" alt="Powerbeats Pro">
+	</section>
+
+	<!-- SECTION 6 -->
+	<section>
+		<ul>
+			<li>
+				<h3>Registreer je Beats</h3>
+				<p>Haal alles uit je Beats met de nieuwste software-updates en meer.</p>
+				<img src="images/registreer-beats.png" alt="Registreer je Beats">
+			</li>
+
+			<li>
+				<h3>Vind je Beats</h3>
+				<p>Als je je Beats kwijt bent, vind je ze met de Zoek mijn-app.</p>
+				<img src="images/vind-beats.png" alt="Vind je Beats">
+			</li>
+
+			<li>
+				<h3>Beats-app voor Android</h3>
+				<p>Download de Beats-app voor extra functies</p>
+				<img src="images/beats-app.png" alt="Beats-app voor Android">
+			</li>
+
+			<li>
+				<h3>Gratis Apple Music</h3>
+				<p>Luister met 3 maanden gratis naar Apple Music met de geselecteerde Beats.</p>
+				<img src="images/apple-music.jpg" alt="Gratis Apple Music">
+			</li>
+		</ul>
+	</section>
+
+	<!-- SECTION 7 -->
+	<section>
+		<h2>Meld je aan voor onze mailinglijst</h2>
+		<p>Ontvang het laatste nieuws. Blijf op de hoogte van de nieuwste producten, collabs en meer.
+		</p>
+		<form>
+			<input type="email" placeholder="Voer je e-mailadres in*" required>
+			<div>
+				<input id="checkbox" type="checkbox" required>
+				<label for="checkbox">Ik wil e-mails ontvangen met updates van Beats-producten, speciale aanbiedingen en
+					af en toe een uitnodiging voor een enquête. *</label>
+			</div>
+			<input type="submit" value="Meld je aan">
+		</form>
+	</section>
+
+
+	<footer>
+		<nav>
+			<ul>
+				<li><a href="https://x.com/beatsbydre" target="_blank" aria-label="X"><img src="images/x-logo.png"
+							alt=""></a></li>
+				<li><a href="https://www.facebook.com/beatsbydre" target="_blank" aria-label="Facebook"><img
+							src="images/facebook-logo.png" alt=""></a></li>
+				<li><a href="https://www.youtube.com/beatsbydre" target="_blank" aria-label="Youtube"><img
+							src="images/youtube-logo.png" alt=""></a></li>
+				<li><a href="https://www.instagram.com/beatsbydre" target="_blank" aria-label="Instagram"><img
+							src="images/instagram-logo.png" alt=""></a></li>
+			</ul>
+		</nav>
+	</footer>
+
 </body>
-	
+
 </html>
