--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 	<script src="javascript.js" defer></script>
 	<link href="css/style.css" rel="stylesheet">
-	<link rel="icon" type="image" href="images/beats-logo.png">
+	<link rel="icon" type="image/png" href="images/beats-logo.png">
 </head>
 
 <body class="pagina-1">
