--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	<section>
 		<h2>Energie voor je work-outs</h2>
 		<ul>
-			<li>
+			<li data-label="Product 1 Powerbeats Fit">
 				<div>
 					<p>Nieuw</p>
 					<h3>Powerbeats Fit</h3>
@@ -57,7 +57,7 @@
 				<img src="images/powerbeatsfit-orange.jpg" alt="Powerbeats Fit oranje">
 			</li>
 
-			<li>
+			<li data-label="Product 2 Powerbeats Pro 2">
 				<div>
 					<p>Nieuw</p>
 					<h3>Powerbeats Pro 2</h3>
@@ -67,7 +67,7 @@
 					<img src="images/powerbeats-pro-2.jpg" alt="Powerbeats Pro 2 grijs">
 				</a>
 			</li>
-			<li>
+			<li data-label="Product 3 Beats Solo">
 				<div>
 					<p>Nieuw</p>
 					<h3>Beats Solo 4</h3>
