--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<p>Altijd in vorm.</p>
 		</div>
 		<a href="powerbeats-pro-2.html">Bestel nu</a>
-		<video src="videos/beats-video-1.mp4" autoplay muted loop></video>
+		<video src="videos/powerbeats-fit.mp4" autoplay muted loop></video>
 	</section>
 
 
